# Futon

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  README.md  README_zh.md  SECURITY.md  deployment-rules.json  gradle.properties  keystore.properties.template  settings.gradle.kts
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
daemon/: CMakeLists.txt  LICENSE_HEADER_GPLv3.txt  futon.h  main.cpp
daemon/core/: branding.h  core.h  error.cpp  error.h  main_loop.cpp  main_loop.h  process_init.cpp  process_init.h  system_status.cpp  system_status.h  watchdog.cpp  watchdog.h
daemon/core/auth/: attestation_verifier.cpp  attestation_verifier.h  auth.h  auth_manager.cpp  auth_manager.h  caller_verifier.cpp  caller_verifier.h  crypto_utils.cpp  crypto_utils.h  device_fingerprint.cpp  device_fingerprint.h  hardened_config.cpp  hardened_config.h  integrity_checker.cpp  integrity_checker.h  key_whitelist.cpp  key_whitelist.h  rate_limiter.cpp  rate_limiter.h  security.cpp  security.h  security_audit.cpp  security_audit.h  session_manager.cpp  session_manager.h  uid_whitelist.cpp  uid_whitelist.h
daemon/core/crypto/: double_ratchet.cpp  double_ratchet.h  stream_cipher.cpp  stream_cipher.h
daemon/core/sandbox/: sandbox.h  seccomp_filter.cpp  seccomp_filter.h  syscall_whitelist.h
daemon/debug/: debug.h  debug_stream.cpp  debug_stream.h  websocket_server.cpp  websocket_server.h  ws_frame.cpp  ws_frame.h
daemon/hotpath/: hotpath.h  hotpath_router.cpp  hotpath_router.h  rule_parser.cpp  rule_parser.h
daemon/inference/: bounding_box.cpp  bounding_box.h  fence_sync.cpp  fence_sync.h  hardware_buffer_bridge.cpp  hardware_buffer_bridge.h  inference.h  nnapi_bridge.cpp  nnapi_bridge.h
daemon/inference/litert_cc_sdk/: CMakeLists.txt
daemon/inference/litert_cc_sdk/include/litert/c/: CMakeLists.txt  litert_any.h  litert_builder.cc  litert_builder.h  litert_builder_test.cc  litert_common.cc  litert_common.h  litert_common_test.cc  litert_compiled_model.cc  litert_compiled_model.h  litert_compiled_model_test.cc  litert_custom_op_kernel.h  litert_custom_op_test.cc  litert_custom_tensor_buffer.h  litert_environment.cc  litert_environment.h  litert_environment_options.cc  litert_environment_options.h  litert_environment_options_test.cc  litert_event.cc  litert_event.h  litert_event_type.h  litert_gl_types.h  litert_layout.cc  litert_layout.h  litert_metrics.cc  litert_metrics.h  litert_model.cc  litert_model.h  litert_model_test.cc  litert_model_types.h  litert_op_code.h  litert_op_options.cc  litert_op_options.h  litert_op_options_test.cc  litert_opaque_options.cc  litert_opaque_options.h  litert_opaque_options_test.cc  litert_options.cc  litert_options.h  (+14 more)
daemon/inference/litert_cc_sdk/include/litert/c/internal/: litert_accelerator.cc  litert_accelerator.h  litert_accelerator_registration.cc  litert_accelerator_registration.h  litert_accelerator_registration_test.cc  litert_accelerator_test.cc  litert_delegate_wrapper.cc  litert_delegate_wrapper.h  litert_dispatch_delegate.h  litert_logging.cc  litert_logging.h  (+5 more)
daemon/inference/litert_cc_sdk/include/litert/cc/: CMakeLists.txt  litert_any.h  litert_any_test.cc  litert_buffer_ref.h  litert_buffer_ref_test.cc  litert_common.h  litert_compiled_model.cc  litert_compiled_model.h  litert_compiled_model_google_tensor_test.cc  litert_compiled_model_gpu_test.cc  litert_compiled_model_jetgpu_test.cc  litert_compiled_model_metal_test.mm  litert_compiled_model_qualcomm_test.cc  litert_compiled_model_test.cc  litert_compiled_model_vulkan_test.cc  litert_compiled_model_webgpu_test.cc  litert_custom_op_kernel.cc  litert_custom_op_kernel.h  litert_custom_op_test.cc  litert_element_type.h  litert_element_type_test.cc  litert_environment.h  litert_environment_options.h  litert_environment_options_test.cc  litert_environment_test.cc  litert_event.h  litert_event_test.cc  litert_expected.h  litert_expected_test.cc  litert_layout.h  litert_layout_test.cc  litert_macros.cc  litert_macros.h  litert_macros_test.cc  litert_model.cc  litert_model.h  litert_model_test.cc  litert_opaque_options.cc  litert_opaque_options.h  litert_opaque_options_test.cc  (+13 more)
daemon/inference/ppocrv5/: image_utils.cpp  image_utils.h  litert_config.h  litert_options_lite.cc  litert_tensor_buffer_types_lite.cc  ocr_engine.cpp  ocr_engine.h  postprocess.cpp  postprocess.h  ppocrv5.h  ppocrv5_types.h  text_detector.cpp  text_detector.h  text_recognizer.cpp  text_recognizer.h
daemon/input/: device_cloner.h  ime_controller.cpp  ime_controller.h  input.h  input_device_discovery.cpp  input_device_discovery.h  input_injector.cpp  input_injector.h  shell_executor.cpp  shell_executor.h  text_injector.cpp  text_injector.h  touch_device.cpp
daemon/ipc/: binder_service.cpp  binder_service.h  futon_daemon_impl.cpp  futon_daemon_impl.h  ipc.h
daemon/ipc/aidl_stub/me/fleey/futon/: AttestationCertificate.h  AuthenticateResult.h  BnFutonDaemon.h  CryptoHandshake.h  DaemonStatus.h  DetectionResult.h  FutonConfig.h  IBufferReleaseCallback.h  IStatusCallback.h  InputDeviceEntry.h  ScreenshotResult.h  SessionStatus.h  SystemStatus.h
daemon/ipc/compat/: binder_auto_utils.h  binder_manager.h  binder_process.h
daemon/vision/: vision.h
daemon/vision/buffer/: hardware_buffer_wrapper.cpp  hardware_buffer_wrapper.h
daemon/vision/capture/: surface_control_capture.cpp  surface_control_capture.h  virtual_display.cpp  virtual_display.h  vision_pipeline.cpp  vision_pipeline.h
daemon/vision/display/: display_adapter.cpp  display_adapter.h  display_transaction.cpp  display_transaction.h
daemon/vision/egl/: egl_environment.cpp  egl_environment.h  gpu_preprocessor.cpp  gpu_preprocessor.h
daemon/vision/fallback/: java_fallback.cpp  java_fallback.h  java_helper_receiver.cpp  java_helper_receiver.h
daemon/vision/loader/: elf_symbol_scanner.cpp  elf_symbol_scanner.h  surface_control_loader.cpp  surface_control_loader.h  symbol_resolver.cpp  symbol_resolver.h
daemon/vision/pipeline/: buffer_queue_pipeline.cpp  buffer_queue_pipeline.h  gl_consumer_wrapper.cpp  gl_consumer_wrapper.h
(+573 files in other folders)
